mono y pardo nooo

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <li><a href="page/Page1.html">Página 1</a></li>
             <li><a href="page/Page2.html">Página 2</a></li>
             <li><a href="page/Page3.html">Página 3</a></li>
-            <li><a href="page/Tienda.html">Tienda</a></li>
+            <li><a href="page/Tienda.html">Tienda de monos</a></li>
         </ul>
     </nav>
 </body>
