--- a/index.html
+++ b/index.html
@@ -3,18 +3,50 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Página Principal</title>
+    <title>Inicio</title>
     <link rel="stylesheet" href="css/style.css">
+    <style>
+        .centro {
+            display: flex;
+            justify-content: center;
+        }
+    </style>
+<head></head>
+    <style>
+        body {
+            position: relative;
+            min-height: 100vh; /* Asegura que el cuerpo tenga altura mínima */
+            margin: 0;
+        }
+
+        nav {
+            position: absolute;
+            bottom: 0; /* Coloca el nav en la parte inferior */
+            left: 0;
+            right: 0;
+        }
+
+        ul {
+            list-style-type: none;
+            padding: 0;
+            text-align: center; /* Opcional: centrar el texto */
+        }
+    </style>
 </head>
 <body>
-    <h1>Bienvenido a la página principal</h1>
+    <h1 style="text-align: center;font-size: 60px;">Bienvenido a la página principal de Multiservicios Villanueva</h1>
+
+    <div class="centro">
+    <img src="images/villanueva.png" alt="Descripción de la imagen" style="max-width: 50%; height: auto;">
+    </div>
+
     <nav>
         <ul>
-            <li><a href="page/Page1.html">Página 1</a></li>
-            <li><a href="page/Page2.html">Página 2</a></li>
-            <li><a href="page/Page3.html">Página 3</a></li>
-            <li><a href="page/Tienda.html">Tienda</a></li>
+            <li><a href="page/Page1.html">¿Qué somos?</a></li>
+            <li><a href="page/Page2.html">Servicios disponibles</a></li>
+            <li><a href="page/Page3.html">Productos disponibles</a></li>
+            <li><a href="page/Tienda.html">Tienda Local</a></li>
         </ul>
     </nav>
 </body>
-</html>
+</html> 
