--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
     <style>
         body {
             position: relative;
-            min-height: 100vh; /* Asegura que el cuerpo tenga altura mínima */
+            min-height: 100vh;
             margin: 0;
         }
 
         nav {
             position: absolute;
-            bottom: 0; /* Coloca el nav en la parte inferior */
+            bottom: 0; 
             left: 0;
             right: 0;
         }
@@ -29,7 +29,7 @@
         ul {
             list-style-type: none;
             padding: 0;
-            text-align: center; /* Opcional: centrar el texto */
+            text-align: center; 
         }
     </style>
 </head>
