--- a/index.html
+++ b/index.html
@@ -5,48 +5,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Inicio</title>
     <link rel="stylesheet" href="css/style.css">
-    <style>
-        .centro {
-            display: flex;
-            justify-content: center;
-        }
-    </style>
-<head></head>
-    <style>
-        body {
-            position: relative;
-            min-height: 100vh;
-            margin: 0;
-        }
-
-        nav {
-            position: absolute;
-            bottom: 0; 
-            left: 0;
-            right: 0;
-        }
-
-        ul {
-            list-style-type: none;
-            padding: 0;
-            text-align: center; 
-        }
-    </style>
 </head>
 <body>
-    <h1 style="text-align: center;font-size: 60px;">Bienvenido a la página principal de Multiservicios Villanueva</h1>
-
-    <div class="centro">
-    <img src="images/villanueva.png" alt="Descripción de la imagen" style="max-width: 50%; height: auto;">
-    </div>
-
     <nav>
         <ul>
-            <li><a href="page/Page1.html">¿Qué somos?</a></li>
-            <li><a href="page/Page2.html">Servicios disponibles</a></li>
-            <li><a href="page/Page3.html">Productos disponibles</a></li>
-            <li><a href="page/Tienda.html">Tienda Local</a></li>
+            <li><a href="page/Qué somos.html">¿Qué somos?</a></li>
+            <li><a href="page/Servicios disponibles.html">Servicios disponibles</a></li>
+            <li><a href="page/Productos disponibles.html">Productos disponibles</a></li>
+            <li><a href="page/Tienda virtual.html">Tienda virtual</a></li>
         </ul>
     </nav>
+
+    <h1 style="text-align: center; font-size: 60px;">Bienvenido a la página principal de Multiservicios Villanueva</h1>
+
+    <div class="centro">
+        <img src="images/villanueva.png" alt="Descripción de la imagen">
+    </div>
+
+    <footer>
+        <p>&copy; 2024 Multiservicios Villanueva. Todos los derechos reservados.</p>
+    </footer>
+
 </body>
-</html> 
+</html>
