--- a/recibos.html
+++ b/recibos.html
@@ -3,19 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Facturación</title>
+    <title>Recibos</title>
     <link rel="stylesheet" href="style.css">
     <script src="script.js" defer></script>
 </head>
 <body>
     <header>
-        <h1>Facturación</h1>
+        <h1>Recibos</h1>
     </header>
     <section>
-        <h2>Productos Seleccionados</h2>
-        <ul id="productos-factura"></ul>
-        <p id="total-factura">Total a Pagar: $0.00</p>
-        <button id="guardar-recibo" onclick="guardarRecibo()">Guardar Recibo</button>
+        <h2>Historial de Compras</h2>
+        <ul id="recibos-lista"></ul>
     </section>
     <button onclick="window.location.href='index.html'">Volver a Inicio</button>
 </body>
